small changes & link to github

--- a/scratch.css
+++ b/scratch.css
@@ -360,6 +360,7 @@ textarea {
 	font-family: 'Inconsolata', monospace;
 	line-height: 1.15;
 	min-height: 98%;
+	resize: vertical;
 }
 textarea::placeholder {
 	color: #93a1a1;
